# lodjur

./: .gitignore  .gitmodules  .hlint.yaml  .jshintrc  CLI.hs  Config.hs  DbTest.hs  GitTest.hs  Main.hs  README.md  Worker.hs  cabal.project  default.nix  hie.yaml  install-into-nix-env.sh  jwt.nix  lodjur-worker.dhall  lodjur-worker.dhall.example  lodjur-worker.toml  lodjur.cabal  lodjur.dhall  lodjur.dhall.example  lodjur.example.toml  lodjur.nix  lodjur.sql  release.nix  shell.nix  stack.yaml  static.nix
Lodjur/: Actor.hs  Auth.hs  Build.hs  DB.hs  Database.hs  Deploy.hs  Deploy2.hs  Deployer.hs  Deployment.hs  EventLogger.hs  Events.hs  Git.hs  JobQueue.hs  Jobs.hs  Output.hs  OutputLogger.hs  Process.hs  User.hs  Web.hs
Lodjur/Database/: CheckRun.hs  CheckSuite.hs  Event.hs  Internal.hs  Job.hs  Revision.hs
Lodjur/Deployer/: Database.hs
Lodjur/Deployment/: Database.hs  Deployer.hs
Lodjur/EventLogger/: Database.hs
Lodjur/Events/: Database.hs  EventLogger.hs
Lodjur/Git/: Command.hs  GitAgent.hs  GitReader.hs
Lodjur/Output/: Database.hs  OutputLogger.hs  OutputLoggers.hs  OutputStreamer.hs
Lodjur/OutputLogger/: Database.hs
Lodjur/Web/: Base.hs  Messenger.hs  WebHook.hs
Lodjur/Web/Auth/: GitHub.hs
Lodjur/Web/WebHook/: Events.hs
Worker/: Build.hs  Config.hs  Git.hs
doc/: check_run.json  check_suite.json  lodjur.example.toml  lodjur.sql
github/: default.nix
github-extra/src/GitHub/: Extra.hs
github-extra/src/GitHub/Data/: Apps.hs  CheckRuns.hs  CheckSuite.hs  Checks.hs  Installations.hs  Sha.hs
github-extra/src/GitHub/Endpoints/: Apps.hs  CheckSuite.hs  Checks.hs
github-extra/src/GitHub/Endpoints/Apps/: Installations.hs
github-extra/src/GitHub/Extra/: Request.hs
github/spec/GitHub/: PullRequestReviewsSpec.hs
github/src/GitHub/: Request.hs
github/src/GitHub/Data/: Definitions.hs  Repos.hs  Request.hs
lib/Database/Redis/: Exception.hs  Queue.hs
lib/Lodjur/: Core.hs  Database.hs  GitHub.hs  Job.hs  JobQueue.hs  Jobs.hs  Logging.hs  Manager.hs  Messages.hs  RSpec.hs  Work.hs
lib/Lodjur/Core/: Types.hs  Util.hs  Websocket.hs
lib/Lodjur/Database/: CheckRun.hs  CheckSuite.hs  Checks.hs  Enum.hs  Event.hs  Internal.hs  Job.hs  Revision.hs  Schema.hs  Types.hs
lib/Lodjur/GitHub/: Events.hs  Payload.hs  Webhook.hs
lib/Lodjur/Internal/: JSON.hs
lib/Lodjur/Manager/: Client.hs  Messages.hs  State.hs
mock/: index.html
mock/css/: iosevka.css  lodjur.css
nix/: sources.json
sql/: lodjur.pgsql  lodjur.sql
static/: dashboard.js  job.js  lodjur.css
static/css/: lodjur.css
static/js/: lodjur.js
web/: Api.hs  Auth.hs  Base.hs  Config.hs  ContentTypes.hs  GithubAuth.hs  Job.hs  Main.hs  Messenger.hs  Session.hs  Stream.hs  Types.hs  User.hs  WS.hs  Web.bak  Web.hs  WebHook.hs  WebSocket.hs
web/Auth/: GitHub.hs
web/Web/: Base.hs  Messenger.hs  WebHook.hs
web/Web/Auth/: GitHub.hs
web/Web/WebHook/: Events.hs
web/WebHook/: Events.hs
worker/: Build.hs  Config.hs  Env.hs  Git.hs  Logging.hs  Main.hs  RSpec.hs  Types.hs
worker/RSpec/: Results.hs
