name:          lodjur
version:       0.3.0
cabal-version: >= 1.8
build-type:    Simple

library                 github-extra
    hs-source-dirs:     github-extra/src
    ghc-options:        -Wall -threaded -O2
    exposed-modules:    GitHub.Extra
                      , GitHub.Data.Apps
                      , GitHub.Data.Checks
                      , GitHub.Data.CheckRuns
                      , GitHub.Data.CheckSuite
                      , GitHub.Data.Installations
                      , GitHub.Data.Sha
                      , GitHub.Endpoints.Apps
                      , GitHub.Endpoints.Apps.Installations
                      , GitHub.Endpoints.Checks
    build-depends:      base                  >= 4.11 && < 5
                      , github                >= 0.21 && < 0.22
                      , http-types            >= 0.12.1 && < 0.13
                      , text                  >= 1.2.3 && < 1.3

library                 lodjur-lib
    hs-source-dirs:     lib
    ghc-options:        -Wall -threaded -O2
    exposed-modules:    Lodjur.Messages
                      , Lodjur.GitHub
                      , Lodjur.Database
                      , Lodjur.Database.Checks
                      , Lodjur.Database.Types
                      , Lodjur.Manager
                      , Lodjur.Manager.Messages
                      , Database.Redis.Exception
                      , Database.Redis.Queue
    build-depends:      base                  >= 4.11 && < 5
                      , aeson                 >= 1.3.1 && < 1.4
                      , bytestring            >= 0.10.8 && < 0.11
                      , github                >= 0.21 && < 0.22
                      , github-extra
                      , hashable              >= 1.2.7.0 && < 1.3
                      , hedis                 >= 0.10.4 && < 0.11
                      , http-client
                      , jwt                   >= 0.9.0 && < 0.10
                      , text                  >= 1.2.3 && < 1.3
                      , time                  >= 1.8.0 && < 1.9
                      , transformers          >= 0.5.5 && < 0.6
                      , unordered-containers  >= 0.2.9 && < 0.3
                      , websockets            >= 0.12 && < 0.13

executable          lodjur
    hs-source-dirs: web
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N -I0
    other-modules:  Config
                  , User
                  , Web
                  , Auth.GitHub
                  , Base
                  , Messenger
                  , WebHook
                  , WebHook.Events
                  , WS
                  , Paths_lodjur
    build-depends:  base                  >= 4.11 && < 5
                  , lodjur-lib
                  , aeson                 >= 1.3.1 && < 1.4
                  , async                 >= 2.2 && < 2.3
                  , base16-bytestring     >= 0.1.1 && < 0.2
                  , binary                >= 0.8.5 && < 0.9
                  , bytestring            >= 0.10.8 && < 0.11
                  , cryptonite            >= 0.25 && < 0.26
                  , directory             >= 1.3 && < 1.4
                  , filepath              >= 1.4 && < 1.5
                  , github                >= 0.21 && < 0.22
                  , github-extra
                  , hashable              >= 1.2.7 && < 1.3
                  , hedis                 >= 0.10.4 && < 0.11
                  , hoauth2
                  , htoml                 >= 1.0.0 && < 1.1
                  , http-client
                  , http-client-tls
                  , http-types            >= 0.12.1 && < 0.13
                  , iso8601-time          >= 0.1.5 && < 0.2
                  , jwt                   >= 0.9.0 && < 0.10
                  , lucid                 >= 2.9.10 && < 2.10
                  , monad-control         >= 1.0.2 && < 1.1
                  , mtl                   >= 2.2.2 && < 2.3
                  , optparse-applicative  >= 0.14 && < 0.15
                  , postgresql-simple     >= 0.5.4 && < 0.6
                  , process               >= 1.6.3 && < 1.7
                  , resource-pool         >= 0.2.3 && < 0.3
                  , stm                   >= 2.4 && < 2.5
                  , text                  >= 1.2.3 && < 1.3
                  , time                  >= 1.8.0 && < 1.9
                  , transformers          >= 0.5.5 && < 0.6
                  , unordered-containers  >= 0.2.9 && < 0.3
                  , uri-bytestring
                  , uuid                  >= 1.3.13 && < 1.4
                  , wai                   >= 3.2.1 && < 3.3
                  , wai-middleware-static >= 0.8.2 && < 0.9
                  , wai-websockets        >= 3.0 && < 3.1
                  , warp                  >= 3.2 && < 3.3
                  , websockets            >= 0.12 && < 0.13
                  , Spock
                  , Spock-lucid

executable          lodjur-worker
    hs-source-dirs: worker
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N -I0
    other-modules:  Build
                  , Config
                  , Env
                  , Git
                  , RSpec
                  , RSpec.Results
                  , Paths_lodjur
    build-depends:  base                  >= 4.11 && < 5
                  , lodjur-lib
                  , aeson                 >= 1.3.1 && < 1.4
                  , aeson-pretty          >= 0.8 && < 0.9
                  , async                 >= 2.2 && < 2.3
                  , bytestring            >= 0.10.8 && < 0.11
                  , directory             >= 1.3 && < 1.4
                  , errors                >= 2.3 && < 2.4
                  , filepath              >= 1.4 && < 1.5
                  , github                >= 0.21 && < 0.22
                  , github-extra
                  , hedis                 >= 0.10.4 && < 0.11
                  , http-client           >= 0.5 && < 0.6
                  , http-client-tls       >= 0.3 && < 0.4
                  , htoml                 >= 1.0.0 && < 1.1
                  , optparse-applicative  >= 0.14 && < 0.15
                  , process               >= 1.6.3 && < 1.7
                  , text                  >= 1.2.3 && < 1.3
                  , time                  >= 1.8.0 && < 1.9
                  , uuid                  >= 1.3.13 && < 1.4
                  , vector                >= 0.12 && < 0.13
