cabal-version: 2.0
name:          lodjur
version:       0.4.0
build-type:    Simple
data-files:
    static/css/fa.css
    static/css/iosevka.css
    static/css/lodjur.css
    static/icon/android-icon-144x144.png
    static/icon/android-icon-192x192.png
    static/icon/android-icon-36x36.png
    static/icon/android-icon-48x48.png
    static/icon/android-icon-72x72.png
    static/icon/android-icon-96x96.png
    static/icon/apple-icon-114x114.png
    static/icon/apple-icon-120x120.png
    static/icon/apple-icon-144x144.png
    static/icon/apple-icon-152x152.png
    static/icon/apple-icon-180x180.png
    static/icon/apple-icon-57x57.png
    static/icon/apple-icon-60x60.png
    static/icon/apple-icon-72x72.png
    static/icon/apple-icon-76x76.png
    static/icon/apple-icon-precomposed.png
    static/icon/apple-icon.png
    static/icon/browserconfig.xml
    static/icon/favicon-16x16.png
    static/icon/favicon-32x32.png
    static/icon/favicon-96x96.png
    static/icon/favicon.ico
    static/icon/manifest.json
    static/icon/ms-icon-144x144.png
    static/icon/ms-icon-150x150.png
    static/icon/ms-icon-310x310.png
    static/icon/ms-icon-70x70.png
    static/js/jquery-3.4.1.min.js
    static/js/lodjur.js
    static/js/moment.js
    static/js/underscore-min.js
    static/webfonts/fa-brands-400.eot
    static/webfonts/fa-brands-400.svg
    static/webfonts/fa-brands-400.ttf
    static/webfonts/fa-brands-400.woff
    static/webfonts/fa-brands-400.woff2
    static/webfonts/fa-light-300.eot
    static/webfonts/fa-light-300.svg
    static/webfonts/fa-light-300.ttf
    static/webfonts/fa-light-300.woff
    static/webfonts/fa-light-300.woff2
    static/webfonts/fa-regular-400.eot
    static/webfonts/fa-regular-400.svg
    static/webfonts/fa-regular-400.ttf
    static/webfonts/fa-regular-400.woff
    static/webfonts/fa-regular-400.woff2
    static/webfonts/fa-solid-900.eot
    static/webfonts/fa-solid-900.svg
    static/webfonts/fa-solid-900.ttf
    static/webfonts/fa-solid-900.woff
    static/webfonts/fa-solid-900.woff2
    static/webfonts/iosevka-term-bold.ttf
    static/webfonts/iosevka-term-bold.woff
    static/webfonts/iosevka-term-bold.woff2
    static/webfonts/iosevka-term-bolditalic.ttf
    static/webfonts/iosevka-term-bolditalic.woff
    static/webfonts/iosevka-term-bolditalic.woff2
    static/webfonts/iosevka-term-boldoblique.ttf
    static/webfonts/iosevka-term-boldoblique.woff
    static/webfonts/iosevka-term-boldoblique.woff2
    static/webfonts/iosevka-term-extrabold.ttf
    static/webfonts/iosevka-term-extrabold.woff
    static/webfonts/iosevka-term-extrabold.woff2
    static/webfonts/iosevka-term-extrabolditalic.ttf
    static/webfonts/iosevka-term-extrabolditalic.woff
    static/webfonts/iosevka-term-extrabolditalic.woff2
    static/webfonts/iosevka-term-extraboldoblique.ttf
    static/webfonts/iosevka-term-extraboldoblique.woff
    static/webfonts/iosevka-term-extraboldoblique.woff2
    static/webfonts/iosevka-term-extralight.ttf
    static/webfonts/iosevka-term-extralight.woff
    static/webfonts/iosevka-term-extralight.woff2
    static/webfonts/iosevka-term-extralightitalic.ttf
    static/webfonts/iosevka-term-extralightitalic.woff
    static/webfonts/iosevka-term-extralightitalic.woff2
    static/webfonts/iosevka-term-extralightoblique.ttf
    static/webfonts/iosevka-term-extralightoblique.woff
    static/webfonts/iosevka-term-extralightoblique.woff2
    static/webfonts/iosevka-term-heavy.ttf
    static/webfonts/iosevka-term-heavy.woff
    static/webfonts/iosevka-term-heavy.woff2
    static/webfonts/iosevka-term-heavyitalic.ttf
    static/webfonts/iosevka-term-heavyitalic.woff
    static/webfonts/iosevka-term-heavyitalic.woff2
    static/webfonts/iosevka-term-heavyoblique.ttf
    static/webfonts/iosevka-term-heavyoblique.woff
    static/webfonts/iosevka-term-heavyoblique.woff2
    static/webfonts/iosevka-term-italic.ttf
    static/webfonts/iosevka-term-italic.woff
    static/webfonts/iosevka-term-italic.woff2
    static/webfonts/iosevka-term-light.ttf
    static/webfonts/iosevka-term-light.woff
    static/webfonts/iosevka-term-light.woff2
    static/webfonts/iosevka-term-lightitalic.ttf
    static/webfonts/iosevka-term-lightitalic.woff
    static/webfonts/iosevka-term-lightitalic.woff2
    static/webfonts/iosevka-term-lightoblique.ttf
    static/webfonts/iosevka-term-lightoblique.woff
    static/webfonts/iosevka-term-lightoblique.woff2
    static/webfonts/iosevka-term-medium.ttf
    static/webfonts/iosevka-term-medium.woff
    static/webfonts/iosevka-term-medium.woff2
    static/webfonts/iosevka-term-mediumitalic.ttf
    static/webfonts/iosevka-term-mediumitalic.woff
    static/webfonts/iosevka-term-mediumitalic.woff2
    static/webfonts/iosevka-term-mediumoblique.ttf
    static/webfonts/iosevka-term-mediumoblique.woff
    static/webfonts/iosevka-term-mediumoblique.woff2
    static/webfonts/iosevka-term-oblique.ttf
    static/webfonts/iosevka-term-oblique.woff
    static/webfonts/iosevka-term-oblique.woff2
    static/webfonts/iosevka-term-regular.ttf
    static/webfonts/iosevka-term-regular.woff
    static/webfonts/iosevka-term-regular.woff2
    static/webfonts/iosevka-term-semibold.ttf
    static/webfonts/iosevka-term-semibold.woff
    static/webfonts/iosevka-term-semibold.woff2
    static/webfonts/iosevka-term-semibolditalic.ttf
    static/webfonts/iosevka-term-semibolditalic.woff
    static/webfonts/iosevka-term-semibolditalic.woff2
    static/webfonts/iosevka-term-semiboldoblique.ttf
    static/webfonts/iosevka-term-semiboldoblique.woff
    static/webfonts/iosevka-term-semiboldoblique.woff2
    static/webfonts/iosevka-term-thin.ttf
    static/webfonts/iosevka-term-thin.woff
    static/webfonts/iosevka-term-thin.woff2
    static/webfonts/iosevka-term-thinitalic.ttf
    static/webfonts/iosevka-term-thinitalic.woff
    static/webfonts/iosevka-term-thinitalic.woff2
    static/webfonts/iosevka-term-thinoblique.ttf
    static/webfonts/iosevka-term-thinoblique.woff
    static/webfonts/iosevka-term-thinoblique.woff2

library                 github-extra
    hs-source-dirs:     github-extra/src
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    exposed-modules:    GitHub.Extra
                      , GitHub.Data.Apps
                      , GitHub.Data.Checks
                      , GitHub.Data.CheckRuns
                      , GitHub.Data.CheckSuite
                      , GitHub.Data.Installations
                      , GitHub.Data.Sha
                      , GitHub.Endpoints.Apps
                      , GitHub.Endpoints.Apps.Installations
                      , GitHub.Endpoints.Checks
                      , GitHub.Endpoints.CheckSuite
    build-depends:      base                  >= 4.11 && < 5
                      , github                >= 0.21 && < 0.22
                      , http-types            >= 0.12.1 && < 0.13
                      , text                  >= 1.2.3 && < 1.3

library                 lodjur-lib
    hs-source-dirs:     lib
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    exposed-modules:    Lodjur.Core
                      , Lodjur.Core.Types
                      , Lodjur.Core.Util
                      , Lodjur.Core.Websocket
                      , Lodjur.Database
                      , Lodjur.Database.Enum
                      , Lodjur.Database.Schema
                      , Lodjur.GitHub
                      , Lodjur.GitHub.Events
                      , Lodjur.GitHub.Payload
                      , Lodjur.GitHub.Webhook
                      , Lodjur.Internal.JSON
                      , Lodjur.Job
                      , Lodjur.Logging
                      , Lodjur.RSpec
    build-depends:      base                  >= 4.11 && < 5
                      , aeson                 >= 1.3.1 && < 1.5
                      , async                 >= 2.2 && < 2.3
                      , beam-core             == 0.8.*
                      , beam-postgres         == 0.4.*
                      , bytestring            >= 0.10.8 && < 0.11
                      , connection            >= 0.2 && < 0.4
                      , deepseq               >= 1.4.4 && < 1.5
                      , deepseq-generics      >= 0.2 && < 0.3
                      , errors                >= 2.3 && < 2.4
                      , exceptions            >= 0.10 && < 0.11
                      , github                >= 0.21 && < 0.22
                      , github-extra
                      , github-webhooks       >= 0.10 && < 0.11
                      , hashable              >= 1.2.7.0 && < 1.3
                      , http-client           >= 0.5 && < 0.7
                      , jwt                   >= 0.10.0 && < 0.11
                      , logging-effect        >= 1.3 && < 1.4
                      , monad-control         >= 1.0 && < 1.1
                      , mtl                   >= 2.2.2 && < 2.3
                      , network               >= 2.6 && < 3.1
                      , network-uri           >= 2.6 && < 2.7
                      , postgresql-simple     >= 0.5.4 && < 0.7
                      , prettyprinter         >= 1.2 && < 1.3
                      , resource-pool         >= 0.2.3 && < 0.3
                      , servant-github-webhook>= 0.4 && < 0.5
                      , servant-server        >= 0.16 && < 0.17
                      , servant-websockets    == 1.2.*
                      , string-conversions    >= 0.4 && < 0.5
                      , stm                   >= 2.4 && < 2.6
                      , text                  >= 1.2.3 && < 1.3
                      , time                  >= 1.8.0 && < 1.9
                      , transformers          >= 0.5.5 && < 0.6
                      , unordered-containers  >= 0.2.9 && < 0.3
                      , uuid                  >= 1.3.13 && < 1.4
                      , vector                >= 0.12 && < 0.13
                      , wai                   >= 3.2.1 && < 3.3
                      , websockets            >= 0.12 && < 0.13

executable              lodjur
    hs-source-dirs:     web
    main-is:            Main.hs
    ghc-options:        -Wall -threaded -O -rtsopts -with-rtsopts=-N -I0
    default-language:   Haskell2010
    other-modules:      Config
                      , Api
                      , Auth
                      , ContentTypes
                      , Job
                      , GithubAuth
                      , Stream
                      , Types
                      , Web
                      , WebHook
                      , WebSocket
                      , Paths_lodjur
    build-depends:      base                  >= 4.11 && < 5
                      , lodjur-lib
                      , aeson                 >= 1.3.1 && < 1.5
                      , async                 >= 2.2 && < 2.3
                      , base16-bytestring     >= 0.1.1 && < 0.2
                      , beam-postgres         == 0.4.*
                      , bifunctors
                      , binary                >= 0.8.5 && < 0.9
                      , bytestring            >= 0.10.8 && < 0.11
                      , cookie                == 0.4.*
                      , containers            >= 0.5 && < 0.7
                      , cryptonite            >= 0.25 && < 0.26
                      , dhall                 >= 1.19 && < 1.25
                      , directory             >= 1.3 && < 1.4
                      , errors                >= 2.3 && < 2.4
                      , filepath              >= 1.4 && < 1.5
                      , github                >= 0.21 && < 0.22
                      , github-extra
                      , github-webhooks       >= 0.10 && < 0.11
                      , hashable              >= 1.2.7 && < 1.3
                      , hoauth2
                      , htoml                 >= 1.0.0 && < 1.1
                      , http-client           >= 0.5 && < 0.7
                      , http-client-tls       >= 0.3 && < 0.4
                      , http-media
                      , http-types            >= 0.12.1 && < 0.13
                      , iso8601-time          >= 0.1.5 && < 0.2
                      , jose                  >= 0.8.0 && < 0.9
                      , jwt                   >= 0.10.0 && < 0.11
                      , language-javascript   >= 0.6 && < 0.7
                      , logging-effect        >= 1.3 && < 1.4
                      , lucid                 >= 2.9.10 && < 2.10
                      , monad-control         >= 1.0.2 && < 1.1
                      , mtl                   >= 2.2.2 && < 2.3
                      , optparse-applicative  >= 0.14 && < 0.15
                      , pipes                 >= 4.3.0 && < 4.4
                      , postgresql-simple     >= 0.5.4 && < 0.7
                      , prettyprinter         >= 1.2 && < 1.3
                      , process               >= 1.6.3 && < 1.7
                      , req                   >= 2.0 && < 2.2
                      , resource-pool         >= 0.2.3 && < 0.3
                      , servant               >= 0.16 && < 0.17
                      , servant-auth-server   >= 0.4 && < 0.5
                      , servant-event-stream  >= 0.1 && < 0.2
                      , servant-github-webhook>= 0.4 && < 0.5
                      , servant-js            >= 0.9 && < 0.10
                      , servant-lucid         >= 0.8 && < 0.10
                      , servant-server        >= 0.16 && < 0.17
                      , servant-websockets    == 1.2.*
                      , stm                   >= 2.4 && < 2.6
                      , string-conversions    >= 0.4 && < 0.5
                      , text                  >= 1.2.3 && < 1.3
                      , time                  >= 1.8.0 && < 1.9
                      , transformers          >= 0.5.5 && < 0.6
                      , unordered-containers  >= 0.2.9 && < 0.3
                      , uri-bytestring
                      , uuid                  >= 1.3.13 && < 1.4
                      , wai                   >= 3.2.1 && < 3.3
                      , wai-extra             >= 3.0 && < 3.1
                      , wai-middleware-static >= 0.8.2 && < 0.9
                      , wai-websockets        >= 3.0 && < 3.1
                      , warp                  >= 3.2 && < 3.3
                      , websockets            >= 0.12 && < 0.13

executable              lodjur-worker
    hs-source-dirs:     worker
    main-is:            Main.hs
    ghc-options:        -Wall -threaded -O -rtsopts -with-rtsopts=-N -I0
    default-language:   Haskell2010
    other-modules:      Build
                      , Config
                      , Env
                      , Git
                      , RSpec
                      , Types
                      , Paths_lodjur
    build-depends:      base                  >= 4.11 && < 5
                      , lodjur-lib
                      , aeson                 >= 1.3.1 && < 1.5
                      , aeson-pretty          >= 0.8 && < 0.9
                      , async                 >= 2.2 && < 2.3
                      , bytestring            >= 0.10.8 && < 0.11
                      , directory             >= 1.3 && < 1.4
                      , dhall                 >= 1.19 && < 1.25
                      , errors                >= 2.3 && < 2.4
                      , exceptions            >= 0.10 && < 0.11
                      , filepath              >= 1.4 && < 1.5
                      , github                >= 0.21 && < 0.22
                      , github-extra
                      , http-client           >= 0.5 && < 0.7
                      , http-client-tls       >= 0.3 && < 0.4
                      , htoml                 >= 1.0.0 && < 1.1
                      , jwt                   >= 0.10.0 && < 0.11
                      , logging-effect        >= 1.3 && < 1.4
                      , mtl                   >= 2.2.2 && < 2.3
                      , network               >= 2.6 && < 3.1
                      , network-uri           >= 2.6 && < 2.7
                      , optparse-applicative  >= 0.14 && < 0.15
                      , prettyprinter         >= 1.2 && < 1.3
                      , process               >= 1.6.3 && < 1.7
                      , string-conversions    >= 0.4 && < 0.5
                      , text                  >= 1.2.3 && < 1.3
                      , time                  >= 1.8.0 && < 1.9
                      , uuid                  >= 1.3.13 && < 1.4
                      , vector                >= 0.12 && < 0.13
                      , websockets            >= 0.12 && < 0.13
